[gd_scene load_steps=4 format=3 uid="uid://yb8g48vkjupj"]

[ext_resource type="Texture2D" uid="uid://pt7egbh5ehoj" path="res://Assets/bottle_placeholder.png" id="1_ls024"]
[ext_resource type="Script" path="res://Scripts/bottle.gd" id="1_x0qar"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fsjmx"]
size = Vector2(40, 158)

[node name="Bottle" type="Node2D"]
script = ExtResource("1_x0qar")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_ls024")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 8.5)
scale = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_fsjmx")

[node name="mytext" type="TextEdit" parent="."]
visible = false
offset_left = -22.0
offset_top = -94.0
offset_right = -14.0
offset_bottom = -55.0
text = "wine"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
